--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     />
     <meta name="author" content="Digital Cyber" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.digitalcyber.digital/" />
+    <link rel="canonical" href="https://digitalcyber.digital/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Digital Cyber Portfolio" />
@@ -24,7 +24,7 @@
       content="Explore Digital Cyber's portfolio featuring innovative web development projects and futuristic designs."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.digitalcyber.digital/" />
+    <meta property="og:url" content="https://digitalcyber.digital/" />
     <meta
       property="og:image"
       content="https://digitalcyber.digital/static/images/og-image.png"
@@ -39,7 +39,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.digitalcyber.digital/static/images/twitter-card.png"
+      content="https://digitalcyber.digital/static/images/twitter-card.png"
     />
 
     <link rel="icon" href="/static/images/logo.ico" type="image/x-icon" />
